example_configs/nginx-app.yaml
# Nginx deployments
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # serviceAccountName: nginx-ingress-serviceaccount
      containers:
      - name: echoserver
        image: nginx
        ports:
        - containerPort: 80

---

# Nginx service
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  # - port: 443
  #   targetPort: 80
  selector:
    app: nginx

---
# Hello world Server Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  # labels:
  #   app.kubernetes.io/name: nginx-ingress
  #   app.kubernetes.io/part-of: nginx-ingress
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: external-nginx.example.com
    http:
      paths:
      # - path: /nginx
      - backend:
          serviceName: nginx
          servicePort: 80

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-service
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - {}
---
